@@ -1,3 +1,9 @@
+3 November 2019
+Discovered two unwarranted assertions while evaluating expressions with
+complex numbers. The code was correct. The assertions are removed. 
+Tests added to valid.bra. See also 
+https://codegolf.stackexchange.com/questions/161483/expand-sine-and-cosine/195251#195251
+
 24 May 2019 
 Renamed variable 'nice' to 'beNice', since 'nice' is a reserved word in some
 C-implementations. Also use printf format %lu instead of %zu if __VMS is
